feat: Implement order-review integration